# GuitarPedals

./: CMakeLists.txt  README.md  STM32F411CEU6_FLASH.ld  arm-toolchain.cmake  testFiles.cpp
inc/: AudioFrame.h  Effects.h  stm32f1xx_hal_conf.h  stm32f4xx_it.h
pcb/: GuitarPedal.bak  GuitarPedal.kicad_sym  fp-lib-table  kicad-pcb.kicad_pcb  kicad-pcb.kicad_prl  kicad-pcb.kicad_pro  kicad-pcb.kicad_sch  ~kicad-pcb.kicad_sch.lck
pcb/GuitarPedal.pretty/: AudioJack.kicad_mod  Mini_F4X1_STM32.kicad_mod  Switches_Stomp_Switch_3PDT.kicad_mod  pcm_adc.kicad_mod
pcb/GuitarPedal.pretty/L7805/: TO255P1020X450X2000-3.kicad_mod
pcb/_restore_backup_2026-07-21T23-03-08-659/: GuitarPedal.bak  GuitarPedal.kicad_sym  fp-lib-table  kicad-pcb.kicad_prl  kicad-pcb.kicad_pro  kicad-pcb.kicad_sch  sym-lib-table
pcb/_restore_backup_2026-07-21T23-03-08-659/GuitarPedal.pretty/: 1_4_Inch_Jacks.kicad_mod
pcb/_restore_backup_2026-07-21T23-03-08-659/footprints/MCP6002-E_P/: DIP787W46P254L927H533Q8.kicad_mod  MCP6002-E_P.kicad_sym
src/: AudioFrame.cpp  Effects.cpp  mainPedal.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
test/: .clangd  BoostTest.cpp  BypassTest.cpp  HardClipTest.cpp  test  testFiles.cpp
